--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,90 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.350
+head: 1.366
 branch:
 locks: strict
-	gilles: 1.350
+	gilles: 1.366
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 350;	selected revisions: 350
+total revisions: 366;	selected revisions: 366
 description:
 ----------------------------
-revision 1.350	locked by: gilles;
+revision 1.366	locked by: gilles;
+date: 2010/10/25 17:15:52;  author: gilles;  state: Exp;  lines: +11 -12
+Permit host* to have change the case of headers.
+----------------------------
+revision 1.365
+date: 2010/10/25 11:42:41;  author: gilles;  state: Exp;  lines: +131 -157
+Fix tls getline pb (read too early)
+Changes place of starttls() myconnect() and other functions.
+----------------------------
+revision 1.364
+date: 2010/10/25 09:56:27;  author: gilles;  state: Exp;  lines: +10 -15
+Fix STARTTLS capability detection bug.
+----------------------------
+revision 1.363
+date: 2010/10/24 17:16:43;  author: gilles;  state: Exp;  lines: +99 -48
+Added --delete2folders option. Deletes folders in host2 that are not in host1.
+----------------------------
+revision 1.362
+date: 2010/10/22 19:23:34;  author: gilles;  state: Exp;  lines: +24 -8
+Added imapsync basename to see how imapsync.exe is used.
+----------------------------
+revision 1.361
+date: 2010/10/19 22:58:06;  author: gilles;  state: Exp;  lines: +28 -8
+Added --nomodules_version option to avoid Roger libeay32.dll missing problem.
+Added test to ckeck if the release number from lfo VERSION file is a number.
+----------------------------
+revision 1.360
+date: 2010/10/19 22:08:23;  author: gilles;  state: Exp;  lines: +8 -7
+Better documentation to subscribe to the imapsync list.
+----------------------------
+revision 1.359
+date: 2010/10/08 01:17:29;  author: gilles;  state: Exp;  lines: +15 -9
+Fixed "Your vendor has not defined POSIX macro SIGALRM" bug on win32.
+----------------------------
+revision 1.358
+date: 2010/10/08 00:40:42;  author: gilles;  state: Exp;  lines: +97 -18
+Add memory_consumption for win32.
+----------------------------
+revision 1.357
+date: 2010/10/04 21:50:56;  author: gilles;  state: Exp;  lines: +10 -10
+Suppressed ref passage in foldersizes() sub.
+----------------------------
+revision 1.356
+date: 2010/10/04 02:44:00;  author: gilles;  state: Exp;  lines: +1270 -1251
+Move all subroutines below main.
+Changed "local $SIG{ALRM}" to "POSIX::sigaction(SIGALRM"
+----------------------------
+revision 1.355
+date: 2010/09/21 01:50:34;  author: gilles;  state: Exp;  lines: +39 -19
+Added tests_max() max() functions.
+Added memory consumption.
+Added memory consumption ratio to biggest message transfered.
+----------------------------
+revision 1.354
+date: 2010/09/16 00:25:20;  author: gilles;  state: Exp;  lines: +27 -15
+Added memory_consumption_ratio()
+Added memory_consumption_of_pid()
+Removed memory_consumption
+----------------------------
+revision 1.353
+date: 2010/09/14 22:46:33;  author: gilles;  state: Exp;  lines: +19 -9
+Added --minsize option.
+----------------------------
+revision 1.352
+date: 2010/09/14 21:53:55;  author: gilles;  state: Exp;  lines: +48 -12
+Added memory_consumption()
+Added tests_memory_consumption()
+Started to analyse memory consumption.
+----------------------------
+revision 1.351
+date: 2010/09/06 16:28:17;  author: gilles;  state: Exp;  lines: +9 -7
+Fixed PERL_VERSION format in imapsync_version_lfo()
+----------------------------
+revision 1.350
 date: 2010/09/06 01:05:09;  author: gilles;  state: Exp;  lines: +33 -24
 Added --noreleasecheck option.
 Added User-agent information (OS, perl version, Mail::IMAPClient version)
