--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.17 2010/07/16 22:01:57 gilles Exp gilles $
+# $Id: INSTALL,v 1.18 2010/10/25 09:32:49 gilles Exp gilles $
 # 
 # INSTALL file for imapsync 
 # imapsync : IMAP sync or copy tool.
@@ -84,9 +84,6 @@ Here is some individual module help:
 - IO:Socket:SSL.pm
   perl -mIO::Socket::SSL -e ''
 
-- Date::Manip
-  perl -mDate::Manip -e ''
-
 - File::Spec
   perl -mFile::Spec -e ''
 
@@ -98,7 +95,7 @@ Here is some individual module help:
 
 Everything in one command:
 
-  perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL -mDate::Manip -mFile::Spec -mDigest::HMAC_MD5 -e ''
+  perl -mMail::IMAPClient -mDigest::MD5 -mTerm::ReadKey -mIO::Socket::SSL -mFile::Spec -mDigest::HMAC_MD5 -e ''
 
 INSTALLING
 ----------
@@ -115,10 +112,14 @@ or copy the file imapsync where you want it to be.
 WINDOWS
 -------
 
+a) Simplest way:
+
+- Use imapsync.exe
+
+b) Hard way:
+
 - Install Perl if it isn't already installed.
-  ActivePerl from ActiveState is a good candidate if
-  you understand nothing at free/open software
-  and want to run imapsync with success.
+  Strawberry Perl is a good candidate
 - Use PPM to install modules listed in the PREREQUISITES section.
   PPM is Perl Package Manager.
 
