--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.350 $
+    $Revision: 1.366 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -16,12 +16,13 @@ SYNOPSIS
 
 INSTALL
      imapsync works fine under any Unix OS with perl.
-     imapsync works fine under Windows (2000, XP) with ActiveState's 5.8 Perl
-     or as a standalone binary software.
+     imapsync works fine under Windows (2000, XP) 
+     with Strawberry Perl 5.10 or 5.12
+     or as a standalone binary software imapsync.exe
 
     imapsync is already available directly on the following distributions
-    (at least): FreeBSD, Debian, Ubuntu, Gentoo, NetBSD, Darwin, Mandriva
-    and OpenBSD (yeah!).
+    (at least): FreeBSD, Debian, Ubuntu, Gentoo, Fedora, NetBSD, Darwin,
+    Mandriva and OpenBSD (yeah!).
 
      Get imapsync at
      http://www.linux-france.org/prj/imapsync/
@@ -70,6 +71,7 @@ USAGE
                [--syncacls]
                [--regexmess <regex>] [--regexmess <regex>]
                [--maxsize <int>]
+               [--minsize <int>]
                [--maxage <int>]
                [--minage <int>]
                [--skipheader <regex>]
@@ -185,8 +187,9 @@ MAILING-LIST
     To write on the mailing-list, the address is:
     <imapsync@linux-france.org>
 
-    To subscribe, send a message to:
-    <imapsync-subscribe@listes.linux-france.org>
+    To subscribe, send any message (even empty) to:
+    <imapsync-subscribe@listes.linux-france.org> then just reply to the
+    confirmation message.
 
     To unsubscribe, send a message to:
     <imapsync-unsubscribe@listes.linux-france.org>
@@ -401,5 +404,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.350 2010/09/06 01:05:09 gilles Exp gilles $
+    $Id: imapsync,v 1.366 2010/10/25 17:15:52 gilles Exp gilles $
 
