--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,42 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.344
+head: 1.350
 branch:
 locks: strict
-	gilles: 1.344
+	gilles: 1.350
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 344;	selected revisions: 344
+total revisions: 350;	selected revisions: 350
 description:
 ----------------------------
-revision 1.344	locked by: gilles;
+revision 1.350	locked by: gilles;
+date: 2010/09/06 01:05:09;  author: gilles;  state: Exp;  lines: +33 -24
+Added --noreleasecheck option.
+Added User-agent information (OS, perl version, Mail::IMAPClient version)
+----------------------------
+revision 1.349
+date: 2010/09/06 00:25:03;  author: gilles;  state: Exp;  lines: +71 -13
+Added new release checking
+----------------------------
+revision 1.348
+date: 2010/09/05 21:28:35;  author: gilles;  state: Exp;  lines: +16 -18
+Strong regex for month in good_date()
+----------------------------
+revision 1.347
+date: 2010/09/05 21:12:10;  author: gilles;  state: Exp;  lines: +61 -50
+Rewrote good_date and removed Date::Manip usage.
+----------------------------
+revision 1.346
+date: 2010/09/05 16:28:18;  author: gilles;  state: Exp;  lines: +34 -36
+Simplified default output.
+----------------------------
+revision 1.345
+date: 2010/08/24 01:44:59;  author: gilles;  state: Exp;  lines: +45 -45
+Better output when copying messages.
+----------------------------
+revision 1.344
 date: 2010/08/20 02:06:13;  author: gilles;  state: Exp;  lines: +123 -49
 Added function fetch_hash_2() allowing a list of uid to be fetched.
 Changed fetch_hash() calls by fetch_hash_2() calls
