--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Synchronise mailboxes between two imap servers. Good at IMAP migration.
     More than 36 different IMAP server softwares supported with success.
 
-    $Revision: 1.344 $
+    $Revision: 1.350 $
 
 SYNOPSIS
     To synchronise imap account "foo" on "imap.truc.org" to imap account
@@ -325,13 +325,14 @@ IMAP SERVERS
      - SmarterMail, Smarter Mail 5.0 Enterprise.
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - Sun Java(tm) System Messaging Server 6.2-2.05,  6.2-7.05
+     - Sun Messaging Server 6.3
      - Surgemail 3.6f5-5
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh), v12.264 Solaris 5.7 (OSI Approved) 
        (http://www.washington.edu/imap/)
      - UW - QMail v2.1
      - Imap part of TCP/IP suite of VMS 7.3.2
-     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 5.5.
+     - Zimbra-IMAP 3.0.1 GA 160, 3.1.0 Build 279, 4.0.5, 4.5.2, 4.5.6, 5.5, 6.x
 
     Please report to the author any success or bad story with imapsync and
     do not forget to mention the IMAP server software names and version on
@@ -340,7 +341,7 @@ IMAP SERVERS
     are useful to know the softwares. Example:
 
      Host1 software:* OK louloutte Cyrus IMAP4 v1.5.19 server ready
-     Host2   software:* OK Courier-IMAP ready
+     Host2 software:* OK Courier-IMAP ready
 
     You can use option --justconnect to get those lines. Example:
 
@@ -400,5 +401,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will often be welcome.
 
-    $Id: imapsync,v 1.344 2010/08/20 02:06:13 gilles Exp gilles $
+    $Id: imapsync,v 1.350 2010/09/06 01:05:09 gilles Exp gilles $
 
