--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 #!/bin/cat
-# $Id: TODO,v 1.83 2010/08/20 02:12:05 gilles Exp gilles $
+# $Id: TODO,v 1.85 2010/09/06 01:08:14 gilles Exp gilles $
 
 TODO file for imapsync
 ----------------------
@@ -20,6 +20,18 @@ http://www.linux-france.org/prj/imapsync_list/msg00307.html
 Evaluate 
 http://www.rackspace.com/apps/email_hosting/migrations
 http://www.yippiemove.com/
+
+Evaluate memory consumption with (or better):
+print qx{ ps o pid,pcpu,comm,vsz,rss,size $$ }, "\n"
+Search memory leaks with 
+Test-Weaken Test-Memory-Cycle Devel-Cycle Devel-Leak Test-Weaken
+sh -x tests.sh ll_bigmail 
+is a good candidate to stress memory.
+
+Suggestion: it's very difficult to track down messages which are behaving
+funny during the sync. It would be great - and presumably easy to code -
+to have an option to have imapsync display e.g. the subject of an
+e-mail when it gets synced, rather than just the message ID and the date/time.
 
 
 Add --noauthmd51 --noauthmd52 to permit noauthmd5 by host
